welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:5: error: value Biscuitcroise is not a member of Unit
possible cause: maybe a semicolon is missing before `value Biscuitcroise'?
  } Biscuitcroise=Biscuitcroise + 1
    ^